test: update tests